--- a/mern-e-commerce-web-app/backend/package.json
+++ b/mern-e-commerce-web-app/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "http-errors": "^2.0.0",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0"
