--- a/e-comm-2.0/backend/package.json
+++ b/e-comm-2.0/backend/package.json
@@ -7,9 +7,12 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "mongoose": "^7.3.1",
     "morgan": "^1.10.0"
   }
 }
