--- a/e-comm-2.0/backend/package.json
+++ b/e-comm-2.0/backend/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0"
   }
