--- a/mini-webapps/imageupload/package.json
+++ b/mini-webapps/imageupload/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^7.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1"
   }
 }
