--- a/e-comm-2.0/backend/package.json
+++ b/e-comm-2.0/backend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
+    "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
