some file cleaning

--- a/e-comm-2.0/frontend/.gitignore
+++ b/e-comm-2.0/frontend/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+ qadeer pani wala : 0316 2003504
 node_modules
 dist
 dist-ssr
