--- a/mega projects/blood-bank/server/package.json
+++ b/mega projects/blood-bank/server/package.json
@@ -7,12 +7,14 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "http-errors": "^2.0.0",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
