--- a/mega projects/e-comm/frontend/package.json
+++ b/mega projects/e-comm/frontend/package.json
@@ -19,6 +19,7 @@
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.14.2",
         "react-toastify": "^9.1.3",
+        "react-tooltip": "^5.20.0",
         "yup": "^1.2.0"
     },
     "devDependencies": {
