--- a/mega projects/e-comm/frontend/package.json
+++ b/mega projects/e-comm/frontend/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
+        "@stripe/react-stripe-js": "^2.1.2",
+        "@stripe/stripe-js": "^2.1.0",
         "@tanstack/react-query": "^4.33.0",
         "@tanstack/react-query-devtools": "^4.33.0",
         "axios": "^1.4.0",
