--- a/The_wild_oasis/package.json
+++ b/The_wild_oasis/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0"
   },
