--- a/The_wild_oasis/package.json
+++ b/The_wild_oasis/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.3",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
