--- a/The_wild_oasis/package.json
+++ b/The_wild_oasis/package.json
@@ -26,6 +26,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
